don't allow updating of user id
